@@ -1,5 +1,6 @@
 Version 0.07 on ????:
-
+    - Use IO::Select if select works, and temp files otherwise (e.g. on
+      Windows)
 Version 0.06 on Mar 17 2011:
     - Avoid deadlock sitations by reading from pipes as soon as possible and
       don't wait for processes to end which they may not be able to do if
